--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,11 @@ services:
       - "--data-dir=/data"
     volumes:
       - "pubsub-data:/data"
+  bigtable:
+    image: google/cloud-sdk:385.0.0-emulators
+    ports:
+      - "8086:8086"
+    entrypoint: "gcloud beta emulators bigtable start"
 
 volumes:
   minio-data: {}
