--- a/interface_service/Dockerfile
+++ b/interface_service/Dockerfile
@@ -1,8 +1,8 @@
-FROM python:3.9-slim
+FROM python:3.10
 
 RUN apt-get update \
 && apt-get install -y --no-install-recommends git \
-&& apt-get purge -y --auto-remove \
+&& apt-get purge -y --auto-remove gcc libc-dev \
 && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /root/
@@ -15,8 +15,10 @@ COPY requirements.txt .
 RUN python -m pip install --upgrade pip &&\
     pip install -r requirements.txt
 
+RUN mkdir models
+
 COPY . .
 
-EXPOSE 80
+EXPOSE 8000
 
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
