--- a/interface_service/Dockerfile
+++ b/interface_service/Dockerfile
@@ -1,19 +1,23 @@
 FROM python:3.10
 
+# Make new user as root
+WORKDIR /app
+RUN useradd -d /app appuser && chown -R appuser: /app
+
+
 RUN apt-get update \
 && apt-get install -y --no-install-recommends git \
 && apt-get purge -y --auto-remove gcc libc-dev \
 && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /root/
-
-ENV VIRTUAL_ENV=/root/venv
-RUN python -m venv $VIRTUAL_ENV
-ENV PATH="$VIRTUAL_ENV/bin:$PATH"
-
-COPY requirements.txt .
+# ...
+# Copy files and install dependencies still as root
+COPY . .
 RUN python -m pip install --upgrade pip &&\
     pip install -r requirements.txt
+
+# Step down from being a root before calling CMD/ENTRYPOINT
+USER appuser
 
 RUN mkdir models
 
