--- a/interface_service/Taskfile.yml
+++ b/interface_service/Taskfile.yml
@@ -6,12 +6,12 @@ vars:
 
 tasks:
   prepare:
-    - python -m venv venv
+    - python -m venv interface_venv
     - unameOut="$(uname -s)"
-    - if [ unameOut == "msys" ] || [ unameOut == "cygwin" ]; then source venv/Scripts/activate; else source venv/bin/activate; fi
+    - if [ unameOut == "msys" ] || [ unameOut == "cygwin" ]; then source interface_venv/Scripts/activate; else source interface_venv/bin/activate; fi
     - pip install -r requirements.txt
   clean:
-    - rm -rf venv
+    - rm -rf interface_venv
   build_builder:
     cmds: ["docker build --target builder -t {{.INTERFACE_SERVICE_BUILDER_IMAGE}} ."]
   build_docker:
@@ -34,3 +34,6 @@ tasks:
         --workdir /project
         {{.INTERFACE_SERVICE_BUILDER_IMAGE}}
         {{.CLI_ARGS}}
+  lint:
+    - pylint --rcfile=.pylintrc src/
+  test: pytest
