Angular testing support

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,8 +1,10 @@
 FROM node:16.15 AS builder
 ARG TASK_URL=https://github.com/go-task/task/releases/download/v3.12.1/task_linux_amd64.deb
 
+ENV CHROME_BIN /usr/bin/chromium
+
 RUN apt-get update \
-    && apt-get install -y curl \
+    && apt-get install -y curl chromium \
     && rm -rf /var/lib/apt/lists/*
 
 RUN curl -o task.deb -L ${TASK_URL} \
@@ -26,6 +28,8 @@ RUN npm run-script build
 
 FROM nginx:1.21.6-alpine AS final
 
+# Set to /etc/nginx/templates/dev to use the development template
+# that proxies the API requests to the inference service
 ENV NGINX_ENVSUBST_TEMPLATE_DIR /etc/nginx/templates/dist
 
 COPY docker/nginx/ /etc/nginx/templates/
