--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,48 +1,54 @@
-name: Deploy Services
+name: Build
+
 on:
-  push:
-    tags: ["v[0-9]+.[0-9]+.[0-9]+"]
+  push
+    # tags: ["v[0-9]+.[0-9]+.[0-9]+"]
+
+env:
+  IMG: ${{ github.repository }}
+  REGISTRY: ghcr.io
+
+# Learning service
 jobs:
-  build-and-push:
+  learning-service:
+    # Only run on master
+    # if: github.event.base_ref=='refs/heads/master'
+    name: Build and push learning service
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: Parse version info from tag
-        run: |
-          # GITHUB_REF is like refs/tags/v2.3.5, so strip the first 11 chars
-          VERSION=${GITHUB_REF:11}
-          MAJOR=`echo "$VERSION" | cut -d . -f 1`
-          MINOR=`echo "$VERSION" | cut -d . -f 2`
-          PATCH=`echo "$VERSION" | cut -d . -f 3`
-          echo "version=$VERSION" >> $GITHUB_ENV
-          echo "version_major=$MAJOR" >> $GITHUB_ENV
-          echo "version_minor=$MINOR" >> $GITHUB_ENV
-          echo "version_patch=$PATCH" >> $GITHUB_ENV
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to DockerHub
+      - uses: docker/setup-buildx-action@v2
+      - name: Login to image registry
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push learning service
-        uses: docker/build-push-action@v2
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: ./.github/actions/build_and_push
         with:
-          context: ./learning_service
-          push: true
-          tags: TODO:latest,TODO:${{ env.version_major }}-latest,TODO:${{ env.version_major }}.${{ env.version_minor }}-latest,TODO:${{ env.version }}
-          cache-to: type=inline
-          cache-from: type=registry,ref=TODO:latest
+          context: ./src
+          file: ./src/Dockerfile
+          img: ${{ env.REGISTRY }}/${{ env.IMG }}/learning_service
 
-      - name: Build and push inference service
-        uses: docker/build-push-action@v2
+# Other service
+  interface-service:
+    name: Build and push the interface service
+    # Only run on master
+    # if: github.event.base_ref=='refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v2
+      - name: Login to image registry
+        uses: docker/login-action@v2
         with:
-          context: ./inference_service
-          push: true
-          tags: TODO:latest,TODO:${{ env.version_major }}-latest,TODO:${{ env.version_major }}.${{ env.version_minor }}-latest,TODO:${{ env.version }}
-          cache-to: type=inline
-          cache-from: type=registry,ref=TODO:latest
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: ./.github/actions/build_and_push
+        with:
+          context: ./interface_service
+          file: ./interface_service/Dockerfile
+          img: ${{ env.REGISTRY }}/${{ env.IMG }}/interface_service
