--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,8 +1,8 @@
 name: Build
 
 on:
-  push
-    # tags: ["v[0-9]+.[0-9]+.[0-9]+"]
+  push:
+    tags: ["v[0-9]+.[0-9]+.[0-9]+"]
 
 env:
   IMG: ${{ github.repository }}
@@ -12,7 +12,7 @@ env:
 jobs:
   learning-service:
     # Only run on master
-    # if: github.event.base_ref=='refs/heads/master'
+    if: github.event.base_ref=='refs/heads/master'
     name: Build and push learning service
     runs-on: ubuntu-latest
     steps:
@@ -35,7 +35,7 @@ jobs:
   interface-service:
     name: Build and push the interface service
     # Only run on master
-    # if: github.event.base_ref=='refs/heads/master'
+    if: github.event.base_ref=='refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
