--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -10,14 +10,9 @@ jobs:
         python-version: ["3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - name: Prepare builder
+      uses: ./.github/actions/builder
+    - name: Lint
+      uses: ./.github/actions/builder_run
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
-      run: |
-        pylint $(git ls-files '*.py')
+        command: pylint $(git ls-files '*.py')
