--- a/.github/actions/builder/action.yml
+++ b/.github/actions/builder/action.yml
@@ -4,6 +4,7 @@ description: "Builds the Docker builder image using BuildKit and GitHub Actions 
 runs:
   using: "composite"
   steps:
+    - uses: docker/setup-buildx-action@v2
     - name: Build builder
       uses: docker/build-push-action@v3
       with:
