--- a/.github/actions/builder/action.yml
+++ b/.github/actions/builder/action.yml
@@ -1,36 +1,14 @@
-name: Build and push Docker image
-description: Builds and pushes docker images for the given details
-
-inputs:
-  context:
-    description: Docker context for the build-push action
-    required: true
-  file:
-    description: Path to the dockerfile
-    required: true
-  img:
-    description: The name of the image
-    required: true
+name: "Build builder"
+description: "Builds the Docker builder image using BuildKit and GitHub Actions cache"
 
 runs:
   using: "composite"
   steps:
-    - name: Gather metadata
-      id: metadata
-      uses: docker/metadata-action@v4
-      with:
-        images: ${{ inputs.img }}
-        tags: |
-          type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}-latest
-          type=semver,pattern={{major}}-latest
-          latest
-    - name: Build and push
+    - name: Build builder
       uses: docker/build-push-action@v3
       with:
-        context: ${{ inputs.context }}
-        file: ${{ inputs.file }}
-        tags: ${{ steps.metadata.outputs.tags }}
-        push: true    
+        target: builder
+        tags: stackoverflow-tagger-builder:latest
+        load: true
         cache-from: type=gha
         cache-to: type=gha,mode=max
