--- a/interface_service/Taskfile.yml
+++ b/interface_service/Taskfile.yml
@@ -6,10 +6,15 @@ vars:
 
 tasks:
   prepare:
-    - python -m venv interface_venv
-    - unameOut="$(uname -s)"
-    - if [ unameOut == "msys" ] || [ unameOut == "cygwin" ]; then source interface_venv/Scripts/activate; else source interface_venv/bin/activate; fi
-    - pip install -r requirements.txt
+    cmds:
+      - python -m venv interface_venv
+      - unameOut="$(uname -s)"
+      - if [ unameOut == "msys" ] || [ unameOut == "cygwin" ]; then source interface_venv/Scripts/activate; else source interface_venv/bin/activate; fi
+      - pip install -r requirements.txt
+    sources:
+      - requirements.txt
+    generates:
+      - interface_venv/**
   clean:
     - rm -rf interface_venv
   build_builder:
@@ -34,5 +39,5 @@ tasks:
         {{.INTERFACE_SERVICE_BUILDER_IMAGE}}
         {{.CLI_ARGS}}
   lint:
-    - pylint --rcfile=.pylintrc src/
+    - pylint --rcfile=.pylintrc src/**
   test: pytest
