--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -4,18 +4,15 @@ on:
   pull_request:
     branches: [ master ]
   push:
-    tags: ["v[0-9]+.[0-9]+.[0-9]+"]
+    tags: [ 'v*.*.*' ]
 
 env:
-  IMG: ${{ github.repository }}
+  IMAGE_NAME_BASE: ${{ env.REGISTRY }}/${{ github.repository }}
   REGISTRY: ghcr.io
 
-
 jobs:
-
-  # Learning service
   learning-service:
-    name: Build and push learning service
+    name: Build learning service
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -24,20 +21,18 @@ jobs:
         uses: docker/login-action@v2
         if: github.event_name != 'pull_request'
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
+      - name: Build Docker image
         uses: ./.github/actions/build_and_push
         with:
           context: ./learning_service
           file: ./learning_service/Dockerfile
-          img: ${{ env.REGISTRY }}/${{ env.IMG }}/learning_service
+          img: ${{ env.REGISTRY }}/${{ env.IMG }}/learning-service
           push: ${{ github.event_name != 'pull_request' }}
-
-  # Interface service
   interface-service:
-    name: Build and push the interface service
+    name: Build interface service
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -46,13 +41,33 @@ jobs:
         uses: docker/login-action@v2
         if: github.event_name != 'pull_request'
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
+      - name: Build Docker image
         uses: ./.github/actions/build_and_push
         with:
           context: ./interface_service
           file: ./interface_service/Dockerfile
-          img: ${{ env.REGISTRY }}/${{ env.IMG }}/interface_service
+          img: ${{ env.REGISTRY }}/${{ env.IMG }}/interface-service
+          push: ${{ github.event_name != 'pull_request' }}
+  frontend:
+    name: Build frontend
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v2
+      - name: Login to image registry
+        uses: docker/login-action@v2
+        if: github.event_name != 'pull_request'
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Docker image
+        uses: ./.github/actions/build_and_push
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          img: ${{ env.REGISTRY }}/${{ env.IMG }}/frontend
           push: ${{ github.event_name != 'pull_request' }}
