--- a/.github/actions/build_and_push/action.yml
+++ b/.github/actions/build_and_push/action.yml
@@ -25,8 +25,8 @@ runs:
         images: ${{ inputs.img }}
         tags: |
           type=semver,pattern={{version}}
-          type=semver,pattern={{major}}.{{minor}}-latest
-          type=semver,pattern={{major}}-latest
+          type=semver,pattern={{major}}.{{minor}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.0.') }}
+          type=semver,pattern={{major}},enable=${{ !startsWith(github.ref, 'refs/tags/v0.') }}
           latest
     - name: Build and push
       uses: docker/build-push-action@v3
