--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,6 +1,8 @@
 name: Build
 
 on:
+  pull_request:
+    branches: [ master ]
   push:
     tags: ["v[0-9]+.[0-9]+.[0-9]+"]
 
@@ -13,8 +15,6 @@ jobs:
 
   # Learning service
   learning-service:
-    # Only run on master
-    if: github.event.base_ref=='refs/heads/master'
     name: Build and push learning service
     runs-on: ubuntu-latest
     steps:
@@ -22,6 +22,7 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - name: Login to image registry
         uses: docker/login-action@v2
+        if: github.event_name != 'pull_request'
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -36,14 +37,13 @@ jobs:
   # Interface service
   interface-service:
     name: Build and push the interface service
-    # Only run on master
-    if: github.event.base_ref=='refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-buildx-action@v2
       - name: Login to image registry
         uses: docker/login-action@v2
+        if: github.event_name != 'pull_request'
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
