--- a/.github/actions/build_and_push/action.yml
+++ b/.github/actions/build_and_push/action.yml
@@ -11,6 +11,10 @@ inputs:
   img:
     description: The name of the image
     required: true
+  push:
+    description: Whether to push the image to the registry
+    required: true
+
 
 runs:
   using: "composite"
@@ -30,8 +34,8 @@ runs:
       with:
         context: ${{ inputs.context }}
         file: ${{ inputs.file }}
-        tags: ${{ steps.metadata.outputs.tags }}
-        push: true    
+        push: ${{ inputs.push }}  
+        tags: ${{ steps.metadata.outputs.tags }}  
         cache-from: type=gha
         cache-to: type=gha,mode=max
         
