--- a/learning_service/notebooks/requirements.txt
+++ b/learning_service/notebooks/requirements.txt
@@ -14,6 +14,7 @@ cachetools==4.2.4
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
+click==8.1.3
 cloudpickle==2.1.0
 crcmod==1.7
 debugpy==1.6.0
@@ -91,6 +92,7 @@ nbclient==0.6.3
 nbconvert==6.5.0
 nbformat==5.4.0
 nest-asyncio==1.5.5
+nltk==3.7
 notebook==6.4.11
 notebook-shim==0.1.0
 numpy==1.22.4
@@ -125,6 +127,7 @@ pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
 pyzmq==23.0.0
+regex==2022.4.24
 requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
@@ -148,6 +151,7 @@ tfx-bsl==1.8.0
 timeloop==1.0.2
 tinycss2==1.1.1
 tornado==6.1
+tqdm==4.64.0
 traitlets==5.2.1.post0
 typing-utils==0.1.0
 typing_extensions==4.2.0
