--- a/helm/stackoverflow-tagger/Chart.yaml
+++ b/helm/stackoverflow-tagger/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: stackoverflow-tagger
-description: A Helm chart for Kubernetes
+description: StackOverflow Tagger system
 
 # A chart can be either an 'application' or a 'library' chart.
 #
