--- a/helm/stackoverflow-tagger/templates/frontend/serviceaccount.yaml
+++ b/helm/stackoverflow-tagger/templates/frontend/serviceaccount.yaml
@@ -1,11 +1,11 @@
-{{- if .Values.serviceAccount.create -}}
+{{- if .Values.frontend.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "stackoverflow-tagger.serviceAccountName" . }}
+  name: {{ include "stackoverflow-tagger.frontend.serviceAccountName" . }}
   labels:
     {{- include "stackoverflow-tagger.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
+  {{- with .Values.frontend.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
