--- a/helm/stackoverflow-tagger/templates/interface-service/deployment.yaml
+++ b/helm/stackoverflow-tagger/templates/interface-service/deployment.yaml
@@ -35,15 +35,15 @@ spec:
           imagePullPolicy: {{ .Values.interfaceService.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8000
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /api/ping
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /api/ping
               port: http
           resources:
             {{- toYaml .Values.interfaceService.resources | nindent 12 }}
