--- a/helm/stackoverflow-tagger/values.yaml
+++ b/helm/stackoverflow-tagger/values.yaml
@@ -36,6 +36,10 @@ learningService:
     # readOnlyRootFilesystem: true
     # runAsNonRoot: true
     # runAsUser: 1000
+  persistence:
+    enabled: true
+    storageClassName: ""
+    size: 10Gi
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
