--- a/learning_service/notebooks/requirements.txt
+++ b/learning_service/notebooks/requirements.txt
@@ -70,7 +70,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.7.0
 jedi==0.18.1
 Jinja2==3.1.2
-joblib==0.14.1
+joblib==1.1.0
 json5==0.9.8
 jsonschema==4.5.1
 jupyter-client==6.1.12
@@ -131,6 +131,8 @@ regex==2022.4.24
 requests==2.27.1
 requests-oauthlib==1.3.1
 rsa==4.8
+scikit-learn==1.1.1
+scipy==1.8.1
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
@@ -148,6 +150,7 @@ tensorflow-serving-api==2.8.0
 termcolor==1.1.0
 terminado==0.15.0
 tfx-bsl==1.8.0
+threadpoolctl==3.1.0
 timeloop==1.0.2
 tinycss2==1.1.1
 tornado==6.1
