updated taskfiles to find the required executables

--- a/interface_service/Taskfile.yml
+++ b/interface_service/Taskfile.yml
@@ -46,6 +46,10 @@ tasks:
         {{.INTERFACE_SERVICE_BUILDER_IMAGE}}
         {{.CLI_ARGS}}
   lint:
-    - "{{.ENV}}/bin/pylint --rcfile=.pylintrc src/"
+    deps: [ prepare ]
+    cmds:
+      - "{{.ENV}}/bin/pylint --rcfile=.pylintrc src/"
   test:
-    - "{{.ENV}}/bin/pytest"
+    deps: [ prepare ]
+    cmds:
+      - "{{.ENV}}/bin/pytest"
