--- a/learning_service/notebooks/requirements.txt
+++ b/learning_service/notebooks/requirements.txt
@@ -64,8 +64,8 @@ httplib2==0.19.1
 idna==3.3
 importlib-metadata==4.11.4
 importlib-resources==5.7.1
-ipykernel==6.13.0
-ipython==8.3.0
+ipykernel
+ipython
 ipython-genutils==0.2.0
 ipywidgets==7.7.0
 jedi==0.18.1
@@ -95,14 +95,14 @@ nest-asyncio==1.5.5
 nltk==3.7
 notebook==6.4.11
 notebook-shim==0.1.0
-numpy==1.22.4
+numpy
 oauth2client==4.1.3
 oauthlib==3.2.0
 opt-einsum==3.3.0
 orjson==3.6.8
 overrides==6.1.0
 packaging==21.3
-pandas==1.4.2
+pandas
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
@@ -164,3 +164,4 @@ Werkzeug==2.1.2
 widgetsnbextension==3.6.0
 wrapt==1.14.1
 zipp==3.8.0
+matplotlib
